# example_ftxui

./: .clangd  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md
src/: CMakeLists.txt  main.cpp
